Hack for transient requiring seq >= 2.24

--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,13 @@
 org-roam.db
 bookmarks
 eln-cache
+elpa
 elpaca
 etc
 history
 persp-confs/
 projectile-bookmarks.eld
+projectile.cache
 var
 transient
 tree-sitter
